# neuView

./: .env.example  REFACTORING_SUMMARY.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  test.yml
config/: config.cns.yaml  config.example.yaml  config.fafb.yaml  config.optic-lobe.yaml
docs/: developer-guide.md  statistics-refactoring.md  user-guide.md
input/: README.md  citations.csv
performance/scripts/: single_query_profiler.py
scripts/: extract_and_fill.py  increment_version.py  issue_78-4_demo.py  sync_output.zsh
src/neuview/: __init__.py  cache.py  cli.py  commands.py  config.py  dataset_adapters.py  managers.py  neuprint_connector.py  page_generator.py  result.py
src/neuview/builders/: page_generator_builder.py
src/neuview/facade/: neu_view_facade.py
src/neuview/models/: domain_models.py  page_generation.py
src/neuview/services/: brain_region_service.py  cache_service.py  citation_service.py  column_analysis_service.py  connection_test_service.py  connectivity_combination_service.py  data_processing_service.py  database_query_service.py  file_service.py  index_generator_service.py  index_service.py  jinja_template_service.py  layer_analysis_service.py  neuroglancer_js_service.py  neuron_name_service.py  neuron_search_service.py  neuron_selection_service.py  neuron_statistics_service.py  neuron_type_discovery.py  page_generation_container.py  partner_analysis_service.py  queue_file_manager.py  queue_processor.py  resource_manager_service.py  roi_analysis_service.py  roi_combination_service.py  roi_data_service.py  roi_hierarchy_service.py  scatterplot_service.py  service_container.py  statistics_calculator.py  statistics_constants.py  statistics_models.py  template_context_service.py  threshold_config.py  threshold_service.py  url_generation_service.py
src/neuview/utils/: __init__.py  atomic_write.py  df_utils.py  html_utils.py  text_utils.py
src/neuview/visualization/: config_manager.py  coordinate_system.py  data_transfer_objects.py  dependency_injection.py  exceptions.py  eyemap_generator.py  file_output_manager.py  region_grid_processor.py
src/neuview/visualization/color/: palette.py
src/neuview/visualization/data_processing/: column_data_manager.py  metric_calculator.py  threshold_calculator.py  validation_manager.py
src/neuview/visualization/performance/: memory.py  monitoring.py  optimizers.py
src/neuview/visualization/rendering/: layout_calculator.py  png_renderer.py  region_config.py  rendering_config.py  rendering_manager.py  svg_renderer.py
static/css/: neuron-page.css
static/examples/: README.md  example.html  neuview-iframe-controller.js
static/js/: iframe-bridge.js  neuron-page.js  responsive-nav.js
templates/: README.md.jinja  base.html.jinja  eyemap.svg.jinja  help.html.jinja  index.html.jinja  neuroglancer-cns.js.jinja  neuron_page.html.jinja  scatterplot.svg.jinja  types.html.jinja
templates/data/: neurons.js.jinja
templates/sections/: connectivity.html.jinja  eyemaps.html.jinja  eyemaps_both.html.jinja  eyemaps_single.html.jinja  footer.html.jinja  hamburger_menu.html.jinja  header.html.jinja  neuron_header.html.jinja  neuron_page_scripts.html.jinja  scatterplots.html.jinja  scatterplots_single.html.jinja  summary_stats.html.jinja  summary_stats_combined.html.jinja  summary_stats_side.html.jinja
templates/static/js/: neuron-search.js.jinja
test/: test_atomic_write.py  test_df_utils.py  test_scatterplot_service.py  test_tm3_neuron_type.py
test/services/: test_neuroglancer_js_service.py  test_partner_analysis_service.py  test_queue_file_manager_manifest.py  test_scatterplot_service.py  test_statistics_calculator.py  test_statistics_models.py  test_template_context_service.py  test_url_generation_service.py
